small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -59,7 +59,7 @@
 			    	<li> Reminder: Homework solutions on google drive (via moodle) </li>
 			    	<li> <a href="./dailyprep/34DP.03.09.21.pdf">3/9 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.03.11.21.pdf">3/11 daily prep</a> </li>
-			    	<li> After reading 10.7 watch <a href=".https://youtu.be/9yxwZ892urI">this video about the second derivative test</a> </li>
+			    	<li> After reading 10.7 watch <a href="https://youtu.be/8jHvMyooxSQ">this video about the second derivative test</a> </li>
 				    <li> My recomendation for a reflection this week is to think about growth mindset again. Khan academy has a great mini-course if you are looking for prompts (linked to in reflection list). For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
 			    </ul>
 
@@ -192,7 +192,7 @@
 						<td> 11 March </td>
 						<td> 10.7 </td>
 						<td> <a href="./dailyprep/34DP.03.11.21.pdf">Daily Prep</a> </td>
-						<td> <a href="https://youtu.be/xpN4QnQwItU">10.7</a> , <a href="https://youtu.be/9yxwZ892urI">The Hessian</a> </td>
+						<td> <a href="https://youtu.be/xpN4QnQwItU">10.7</a> , <a href="https://youtu.be/8jHvMyooxSQ">The Hessian</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
