small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -55,6 +55,7 @@
 
 			    <h3>Week 4</h3>
 			    <ul>
+			    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
 			    	<li> Please answer the week 4 check-in (I swear it's short) </li>
 			    	<li> Reminder: Homework solutions on google drive (via moodle) </li>
 			    	<li> <a href="./dailyprep/34DP.03.09.21.pdf">3/9 daily prep</a> </li>
