small udpates to class webpages

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -50,18 +50,25 @@
 
 			    <h3> Week 4</h3>
 			    <ul>
-			    	<li> <a href="./resources/gerrymandering.pdf"> Gerrymandering (due March 10th) </a> </li>
-				    <li> Watch these two videos: <a href="https://www.youtube.com/watch?v=CfJzrmS9UfY&list=PLF7CBA45AEBAD18B8&index=4"> stars </a> and <a href="https://www.youtube.com/watch?v=heKK95DAKms&list=PLF7CBA45AEBAD18B8&index=5"> snakes </a>  </li>
-				    <li> Read this section of <a href="https://en.wikipedia.org/wiki/M._C._Escher#Mathematically_inspired_work"> Wikipedia </a> about how M.C. Eschers work draws on math </li>
-				    <li> <a href="http://vihart.com/hexaflexagons/"> Hexaflexagons </a> </li> 
-				    <li> <a href="https://www.birs.ca/workshops/2021/21w2240/files/Sonobe%20Assembly%20Guide.pdf"> Modular origami </a> and <a href="http://www.origami-instructions.com/modular-sonobe-unit.html"> instructions for sonobe units </a> </li>
-				    <li> <a href="https://www.sciencefriday.com/educational-resources/tessellation-and-miura-folds/"> Miura folds </a> </li>
-				    <li> <a href="https://www.samiramian.uk/"> Islamic geometric patterns </a> and <a href="https://www.birs.ca/workshops/2021/21w2240/files/Samira_Mian.pdf"> an example to work through </a> </li>
-				    <li> In class we might also discuss tesseslation, symmetry in wallpaper paterns, fractals, crocheting, and other illustrationsin math </li>
+			    	<li> <a href="./resources/projectinstructions.pdf"> Project Instructions </a> </li>
+			    	<li> <a href="./resources/projectideas.pdf"> Project Ideas </a> </li>
+			    	<li> Project proposals due March 19th </a> </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignmnets</summary>
+
+			    		<h3> Week 4</h3>
+					    <ul>
+					    	<li> <a href="./resources/gerrymandering.pdf"> Gerrymandering (due March 10th) </a> </li>
+						    <li> Watch these two videos: <a href="https://www.youtube.com/watch?v=CfJzrmS9UfY&list=PLF7CBA45AEBAD18B8&index=4"> stars </a> and <a href="https://www.youtube.com/watch?v=heKK95DAKms&list=PLF7CBA45AEBAD18B8&index=5"> snakes </a>  </li>
+						    <li> Read this section of <a href="https://en.wikipedia.org/wiki/M._C._Escher#Mathematically_inspired_work"> Wikipedia </a> about how M.C. Eschers work draws on math </li>
+						    <li> <a href="http://vihart.com/hexaflexagons/"> Hexaflexagons </a> </li> 
+						    <li> <a href="https://www.birs.ca/workshops/2021/21w2240/files/Sonobe%20Assembly%20Guide.pdf"> Modular origami </a> and <a href="http://www.origami-instructions.com/modular-sonobe-unit.html"> instructions for sonobe units </a> </li>
+						    <li> <a href="https://www.sciencefriday.com/educational-resources/tessellation-and-miura-folds/"> Miura folds </a> </li>
+						    <li> <a href="https://www.samiramian.uk/"> Islamic geometric patterns </a> and <a href="https://www.birs.ca/workshops/2021/21w2240/files/Samira_Mian.pdf"> an example to work through </a> </li>
+						    <li> In class we might also discuss tesseslation, symmetry in wallpaper paterns, fractals, crocheting, and other illustrationsin math </li>
+					    </ul>
 
 			    		<h3> Week 3</h3>
 					    <ul>
@@ -170,21 +177,21 @@
 					<tr>
 						<td> 6 </td>
 						<td> 16 March </td>
-						<td> Topic 5 </td>
+						<td> Possible shapes of the universe </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 March </td>
-						<td> Topic 5 </td>
+						<td> Possible shapes of the universe </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
 						<td> 23 March </td>
-						<td> Topic 6 </td>
+						<td> ??? </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -198,28 +205,28 @@
 					<tr>
 						<td> 8 </td>
 						<td> 30 March </td>
-						<td> Topic 7 </td>
+						<td> Fibonacci in nature </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 1 April </td>
-						<td> Topic 7 </td>
+						<td> Fibonacci in nature </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 6 April </td>
-						<td> Topic 8 </td>
+						<td> Paradoxes </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 8 April </td>
-						<td> Topic 8 </td>
+						<td> Paradoxes </td>
 						<td> </td>
 						<td> </td>
 					</tr>
