small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,19 +53,28 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 4</h3>
+			    <h3>Week 5</h3>
 			    <ul>
 			    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
-			    	<li> Please answer the week 4 check-in (I swear it's short) </li>
-			    	<li> Reminder: Homework solutions on google drive (via moodle) </li>
-			    	<li> <a href="./dailyprep/34DP.03.09.21.pdf">3/9 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.03.11.21.pdf">3/11 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </li>
 			    	<li> After reading 10.7 watch <a href="https://youtu.be/8jHvMyooxSQ">this video about the second derivative test</a> </li>
-				    <li> My recomendation for a reflection this week is to think about growth mindset again. Khan academy has a great mini-course if you are looking for prompts (linked to in reflection list). For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
+				    <li> Here is an idea: write a reflection about the value of meta-cognition and reflection. When has reflection helped you learn in the past? What elemtents were useful? What you recommend to someone else that was learning math in terms of reflecting on what they were learning and how they were learning it. Or pick from the <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 4</h3>
+					    <ul>
+					    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
+					    	<li> Please answer the week 4 check-in (I swear it's short) </li>
+					    	<li> Reminder: Homework solutions on google drive (via moodle) </li>
+					    	<li> <a href="./dailyprep/34DP.03.09.21.pdf">3/9 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.03.11.21.pdf">3/11 daily prep</a> </li>
+					    	<li> After reading 10.7 watch <a href="https://youtu.be/8jHvMyooxSQ">this video about the second derivative test</a> </li>
+						    <li> My recomendation for a reflection this week is to think about growth mindset again. Khan academy has a great mini-course if you are looking for prompts (linked to in reflection list). For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
+					    </ul>
 
 			    		<h3>Week 3</h3>
 					    <ul>
@@ -200,16 +209,16 @@
 						<td> 6 </td>
 						<td> 16 March </td>
 						<td> 11.1, 11.2 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a>  </td>
+						<td> <a href="https://youtu.be/XR8iVxdyYs8">11.1</a> , <a href="https://youtu.be/VEqbIHxTLDY">11.2</a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 March </td>
 						<td> 11.3, 11.5 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </td>
+						<td> <a href="">11.3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
