small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -218,7 +218,7 @@
 						<td> 18 March </td>
 						<td> 11.3, 11.5 </td>
 						<td> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </td>
-						<td> <a href="">11.3</a> </td>
+						<td> <a href="https://youtu.be/UhIj0ujo0w0">11.3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
