small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -58,7 +58,6 @@
 			    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
 			    	<li> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </li>
-			    	<li> After reading 10.7 watch <a href="https://youtu.be/8jHvMyooxSQ">this video about the second derivative test</a> </li>
 				    <li> Here is an idea: write a reflection about the value of meta-cognition and reflection. When has reflection helped you learn in the past? What elemtents were useful? What you recommend to someone else that was learning math in terms of reflecting on what they were learning and how they were learning it. Or pick from the <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
 			    </ul>
 
@@ -209,7 +208,7 @@
 						<td> 6 </td>
 						<td> 16 March </td>
 						<td> 11.1, 11.2 </td>
-						<td> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a>  </td>
+						<td> <a href="./dailyprep/34DP.03.16.21.pdf">daily prep</a>  </td>
 						<td> <a href="https://youtu.be/XR8iVxdyYs8">11.1</a> , <a href="https://youtu.be/VEqbIHxTLDY">11.2</a>  </td>
 						<td> </td>
 					</tr>
@@ -217,8 +216,8 @@
 						<td> </td>
 						<td> 18 March </td>
 						<td> 11.3, 11.5 </td>
-						<td> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </td>
-						<td> <a href="https://youtu.be/UhIj0ujo0w0">11.3</a> </td>
+						<td> <a href="./dailyprep/34DP.03.18.21.pdf">daily prep</a> </td>
+						<td> <a href="">11.3</a>, <a href="">11.5</a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -264,7 +263,7 @@
 					<tr>
 						<td> </td>
 						<td> 8 April </td>
-						<td> 12.1 </td>
+						<td> Line and Surface Integrals </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -272,7 +271,7 @@
 					<tr>
 						<td> 10 </td>
 						<td> 13 April </td>
-						<td> 12.2 </td>
+						<td> 12.1, 12.2 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
