small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -217,7 +217,7 @@
 						<td> 18 March </td>
 						<td> 11.3, 11.5 </td>
 						<td> <a href="./dailyprep/34DP.03.18.21.pdf">daily prep</a> </td>
-						<td> <a href="">11.3</a>, <a href="">11.5</a>  </td>
+						<td> <a href="https://youtu.be/d-Cn9p-D_5A">11.3</a>, <a href="https://youtu.be/SurY43pcVZE">11.5</a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
