small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -208,7 +208,7 @@
 						<td> 6 </td>
 						<td> 16 March </td>
 						<td> 11.1, 11.2 </td>
-						<td> <a href="./dailyprep/34DP.03.16.21.pdf">daily prep</a>  </td>
+						<td> <a href="./dailyprep/34DP.03.16.21.pdf">Daily prep</a>  </td>
 						<td> <a href="https://youtu.be/XR8iVxdyYs8">11.1</a> , <a href="https://youtu.be/VEqbIHxTLDY">11.2</a>  </td>
 						<td> </td>
 					</tr>
@@ -216,7 +216,7 @@
 						<td> </td>
 						<td> 18 March </td>
 						<td> 11.3, 11.5 </td>
-						<td> <a href="./dailyprep/34DP.03.18.21.pdf">daily prep</a> </td>
+						<td> <a href="./dailyprep/34DP.03.18.21.pdf">Daily prep</a> </td>
 						<td> <a href="https://youtu.be/d-Cn9p-D_5A">11.3</a>, <a href="https://youtu.be/SurY43pcVZE">11.5</a>  </td>
 						<td> </td>
 					</tr>
@@ -224,8 +224,8 @@
 						<td> 7 </td>
 						<td> 23 March </td>
 						<td> 11.6 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.18.21.pdf">Daily prep</a>  </td>
+						<td> <a href="https://youtu.be/gaXp4MzFA_s">11.6</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
