small udpates to class webpages

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -48,15 +48,21 @@
 			<section id="welcome">
 			    <h2>Welcome</h2>
 
-			    <h3> Week 4</h3>
+			    <h3> Week 6</h3>
 			    <ul>
 			    	<li> <a href="./resources/projectinstructions.pdf"> Project Instructions </a> </li>
-			    	<li> <a href="./resources/projectideas.pdf"> Project Ideas </a> </li>
-			    	<li> Project proposals due March 19th </a> </li>
+			    	<li> Work on projects </a> </li>
 			    </ul>
 
 			    <details>
-			    	<summary> Previous weeks assignmnets</summary>
+			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3> Week 5</h3>
+					    <ul>
+					    	<li> <a href="./resources/projectinstructions.pdf"> Project Instructions </a> </li>
+					    	<li> <a href="./resources/projectideas.pdf"> Project Ideas </a> </li>
+					    	<li> Project proposals due March 19th </a> </li>
+					    </ul>
 
 			    		<h3> Week 4</h3>
 					    <ul>
@@ -191,7 +197,7 @@
 					<tr>
 						<td> 7 </td>
 						<td> 23 March </td>
-						<td> ??? </td>
+						<td> Curvature of space </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -205,14 +211,14 @@
 					<tr>
 						<td> 8 </td>
 						<td> 30 March </td>
-						<td> Fibonacci in nature </td>
+						<td> Pascal's triangle and patterns </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 1 April </td>
-						<td> Fibonacci in nature </td>
+						<td> Pascal's triangle and patterns </td>
 						<td> </td>
 						<td> </td>
 					</tr>
