small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,16 +53,31 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 5</h3>
+			    <h3>Week 7</h3>
 			    <ul>
-			    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
-			    	<li> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </li>
-				    <li> Here is an idea: write a reflection about the value of meta-cognition and reflection. When has reflection helped you learn in the past? What elemtents were useful? What you recommend to someone else that was learning math in terms of reflecting on what they were learning and how they were learning it. Or pick from the <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
+			    	<li> <a href="./resources/chapter_9_checkpoint_revisions.pdf">Chapter 9 checkpoint second attempt</a> (30 min per problem)</li>
+			    	<li> <a href="./resources/chapter_10_checkpoint_part_a.pdf">Chapter 10 checkpoint part a</a> (1.5 hours)</li>
+			    	<li> <a href="./resources/chapter_10_checkpoint_part_b.pdf">Chapter 10 checkpoint part b</a> (1.5 hours)</li>
+			    	<li> <a href="./dailyprep/34DP.03.30.21.pdf">3/30 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.04.01.21.pdf">4/1 daily prep</a> </li>
+				    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 6</h3>
+					    <ul>
+					    	<li> <a href="./dailyprep/34DP.03.23.21.pdf">3/23 daily prep</a> </li>
+					    </ul>
+
+			    		<h3>Week 5</h3>
+					    <ul>
+					    	<li> information about <a href="./resources/checkpointrevisions.pdf">checkpoint revisions</a> </li>
+					    	<li> <a href="./dailyprep/34DP.03.16.21.pdf">3/16 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.03.18.21.pdf">3/18 daily prep</a> </li>
+						    <li> Here is an idea: write a reflection about the value of meta-cognition and reflection. When has reflection helped you learn in the past? What elemtents were useful? What you recommend to someone else that was learning math in terms of reflecting on what they were learning and how they were learning it. Or pick from the <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
+					    </ul>
 
 			    		<h3>Week 4</h3>
 					    <ul>
@@ -240,32 +255,32 @@
 						<td> 8 </td>
 						<td> 30 March </td>
 						<td> 11.7 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.30.21.pdf">Daily prep</a></td>
+						<td> <a href="https://youtu.be/rpTZoiNWH0g">11.7</a></td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 1 April </td>
 						<td> 11.8 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.01.21.pdf">Daily prep</a> </td>
+						<td> <a href="https://youtu.be/I2oEoymy82g">11.8</a></td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 6 April </td>
 						<td> 11.9 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.06.21.pdf">Daily prep</a> </td>
+						<td> <a href="https://youtu.be/fsXgkMK-MAA">11.9</a></td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 8 April </td>
 						<td> Line and Surface Integrals </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.08.21.pdf">Daily prep</a>, <a href="./resources/scalarlineint.pdf">Reading 1</a>, <a href="./resources/scalarsurfaceint.pdf">Reading 2</a> </td>
+						<td> <a href="https://youtu.be/FXevK2LkLzk">Scalar line and surface integrals</a></td>
 						<td> </td>
 					</tr>
 					<tr>
