small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -55,9 +55,9 @@
 
 			    <h3>Week 7</h3>
 			    <ul>
-			    	<li> <a href="./resources/chapter_9_checkpoint_revisions.pdf">Chapter 9 checkpoint second attempt</a> (30 min per problem)</li>
-			    	<li> <a href="./resources/chapter_10_checkpoint_part_a.pdf">Chapter 10 checkpoint part a</a> (1.5 hours)</li>
-			    	<li> <a href="./resources/chapter_10_checkpoint_part_b.pdf">Chapter 10 checkpoint part b</a> (1.5 hours)</li>
+			    	<li> <a href="./resources/chapter_9_checkpoint_revisions.pdf">Chapter 9 checkpoint second attempt</a> (30 min per problem) Due April 1 </li>
+			    	<li> <a href="./resources/chapter_10_checkpoint_part_a.pdf">Chapter 10 checkpoint part a</a> (1.5 hours) Due April 1 </li>
+			    	<li> <a href="./resources/chapter_10_checkpoint_part_b.pdf">Chapter 10 checkpoint part b</a> (1.5 hours) Due April 1 </li>
 			    	<li> <a href="./dailyprep/34DP.03.30.21.pdf">3/30 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.04.01.21.pdf">4/1 daily prep</a> </li>
 				    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
