small udpates to class webpages

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -51,6 +51,7 @@
 			    <h3> Week 7</h3>
 			    <ul>
 			    	<li> <a href="./resources/projectinstructions.pdf"> Project Instructions </a> </li>
+			    	<li> <a href="./resources/projectrubric.pdf"> Project Rubric and peer review instructions </a> </li>
 			    	<li> Send first draft to peers (April 6th) </li>
 			    	<li> In class peer reviews (April 8th) </li>
 			    	<li> First project due (April 13th) </li>
