small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,18 +53,24 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 7</h3>
+			    <h3>Week 10</h3>
 			    <ul>
-			    	<li> <a href="./resources/chapter_9_checkpoint_revisions.pdf">Chapter 9 checkpoint second attempt</a> (30 min per problem) Due April 1 </li>
-			    	<li> <a href="./resources/chapter_10_checkpoint_part_a.pdf">Chapter 10 checkpoint part a</a> (1.5 hours) Due April 1 </li>
-			    	<li> <a href="./resources/chapter_10_checkpoint_part_b.pdf">Chapter 10 checkpoint part b</a> (1.5 hours) Due April 1 </li>
-			    	<li> <a href="./dailyprep/34DP.03.30.21.pdf">3/30 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.04.01.21.pdf">4/1 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.04.13.21.pdf">4/13 daily prep</a> </li>
 				    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 7</h3>
+					    <ul>
+					    	<li> <a href="./resources/chapter_9_checkpoint_revisions.pdf">Chapter 9 checkpoint second attempt</a> (30 min per problem) Due April 1 </li>
+					    	<li> <a href="./resources/chapter_10_checkpoint_part_a.pdf">Chapter 10 checkpoint part a</a> (1.5 hours) Due April 1 </li>
+					    	<li> <a href="./resources/chapter_10_checkpoint_part_b.pdf">Chapter 10 checkpoint part b</a> (1.5 hours) Due April 1 </li>
+					    	<li> <a href="./dailyprep/34DP.03.30.21.pdf">3/30 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.04.01.21.pdf">4/1 daily prep</a> </li>
+						    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
+					    </ul>
 
 			    		<h3>Week 6</h3>
 					    <ul>
@@ -287,8 +293,8 @@
 						<td> 10 </td>
 						<td> 13 April </td>
 						<td> 12.1, 12.2 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.13.21.pdf">Daily prep</a> </td>
+						<td> <a href="https://youtu.be/XmmDgyeTU-0">12.1</a>, <a href="https://youtu.be/uoLONXyCduk">12.2</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
