--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -301,8 +301,8 @@
 						<td> </td>
 						<td> 15 April </td>
 						<td> 12.3 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.15.21.pdf">Daily prep</a>  </td>
+						<td> <a href="https://youtu.be/jDkReTte3Zg">12.3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
