small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,14 +53,24 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 10</h3>
+			    <h3>Week 11</h3>
 			    <ul>
-			    	<li> <a href="./dailyprep/34DP.04.13.21.pdf">4/13 daily prep</a> </li>
+			    	<li> <a href="./resources/chapter_11_checkpoint_1_a.pdf">Chapter 11 checkpoint part a</a> (2 hours) Due April 25 </li>
+					<li> <a href="./resources/chapter_11_checkpoint_1_b.pdf">Chapter 11 checkpoint part b</a> (2 hours) Due April 25 </li>
+			    	<li> <a href="./dailyprep/34DP.04.20.21.pdf">4/20 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.04.22.21.pdf">4/22 daily prep</a> </li>
 				    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 10</h3>
+					    <ul>
+					    	<li> <a href="./dailyprep/34DP.04.13.21.pdf">4/13 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.04.15.21.pdf">4/15 daily prep</a> </li>
+						    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
+					    </ul>
 
 			    		<h3>Week 7</h3>
 					    <ul>
@@ -302,7 +312,7 @@
 						<td> 15 April </td>
 						<td> 12.3 </td>
 						<td> <a href="./dailyprep/34DP.04.15.21.pdf">Daily prep</a>  </td>
-						<td> <a href="https://youtu.be/jDkReTte3Zg">12.3</a> </td>
+						<td> <a href="https://youtu.be/A2GNoTSSelg">12.3</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
