--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -55,7 +55,7 @@
 
 			    <h3>Week 11</h3>
 			    <ul>
-			    	<li> <a href="./resources/chapter_11_checkpoint_1_a.pdf">Chapter 11 checkpoint part a</a> (2 hours) Due April 25 </li>
+			    	<li> <a href="./resources/Chapter_11_checkpoint_1_a.pdf">Chapter 11 checkpoint part a</a> (2 hours) Due April 25 </li>
 					<li> <a href="./resources/chapter_11_checkpoint_1_b.pdf">Chapter 11 checkpoint part b</a> (2 hours) Due April 25 </li>
 			    	<li> <a href="./dailyprep/34DP.04.20.21.pdf">4/20 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.04.22.21.pdf">4/22 daily prep</a> </li>
@@ -319,16 +319,16 @@
 						<td> 11 </td>
 						<td> 20 April </td>
 						<td> 12.4 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.20.21.pdf">Daily prep</a> </td>
+						<td> <a href="https://youtu.be/VEcy1wm92bU">12.4</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 22 April </td>
 						<td> 12.5, 12.6 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.22.21.pdf">Daily prep</a> </td>
+						<td> <a href="">12.5</a>, <a href="">12.6</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
