--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -57,6 +57,7 @@
 			    <ul>
 			    	<li> <a href="./resources/chapter_11_checkpoint_1_a.pdf">Chapter 11 checkpoint part a</a> (2 hours) Due April 25 </li>
 					<li> <a href="./resources/chapter_11_checkpoint_1_b.pdf">Chapter 11 checkpoint part b</a> (2 hours) Due April 25 </li>
+					<li> <a href="./resources/chapter_9_checkpoint_3.pdf">Chapter 9 checkpoint revisions</a> (30 min per question) Due April 25 </li>
 			    	<li> <a href="./dailyprep/34DP.04.20.21.pdf">4/20 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.04.22.21.pdf">4/22 daily prep</a> </li>
 				    <li> Reflection: <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
@@ -328,7 +329,7 @@
 						<td> 22 April </td>
 						<td> 12.5, 12.6 </td>
 						<td> <a href="./dailyprep/34DP.04.22.21.pdf">Daily prep</a> </td>
-						<td> <a href="">12.5</a>, <a href="">12.6</a> </td>
+						<td> <a href="https://youtu.be/bWOEWoq-fX8">12.5</a>, <a href="https://youtu.be/2-Zqt2Faduc">12.6</a>, <a href="https://youtu.be/2IsVhUqOyWE">Del Operator</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
