small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -336,32 +336,32 @@
 						<td> 12 </td>
 						<td> 27 April </td>
 						<td> 12.7 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.27.21.pdf">Daily prep</a> </td>
+						<td> <a href="https://youtu.be/HX3yXuN_F7I">12.7</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 29 April </td>
 						<td> 12.8 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.04.29.21.pdf">Daily prep</a> </td>
+						<td> <a href="">12.8</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 4 May </td>
 						<td> 12.9 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.05.04.21.pdf">Daily prep</a> </td>
+						<td> <a href="">12.9</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 6 May </td>
 						<td> 12.10 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.05.08.21.pdf">Daily prep</a> </td>
+						<td> <a href="">12.10</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
