--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -55,6 +55,7 @@
 
 			    <h3>Week 11</h3>
 			    <ul>
+			    	<li> <a href="./resources/chapter_10_checkpoint_2.pdf">Chapter 10 checkpoint attempt 2</a> (30 min per problem) Due May 2 </li>
 			    	<li> <a href="./resources/chapter_11_checkpoint_1_a.pdf">Chapter 11 checkpoint part a</a> (2 hours) Due April 25 </li>
 					<li> <a href="./resources/chapter_11_checkpoint_1_b.pdf">Chapter 11 checkpoint part b</a> (2 hours) Due April 25 </li>
 					<li> <a href="./resources/chapter_9_checkpoint_3.pdf">Chapter 9 checkpoint revisions</a> (30 min per question) Due April 25 </li>
