--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -346,7 +346,7 @@
 						<td> 29 April </td>
 						<td> 12.8 </td>
 						<td> <a href="./dailyprep/34DP.04.29.21.pdf">Daily prep</a> </td>
-						<td> <a href="">12.8</a> </td>
+						<td> <a href="https://youtu.be/t9bZe63jfNM">12.8</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -354,7 +354,7 @@
 						<td> 4 May </td>
 						<td> 12.9 </td>
 						<td> <a href="./dailyprep/34DP.05.04.21.pdf">Daily prep</a> </td>
-						<td> <a href="">12.9</a> </td>
+						<td> <a href="https://youtu.be/UdSScW5PKmY">12.9</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
@@ -362,7 +362,7 @@
 						<td> 6 May </td>
 						<td> 12.10 </td>
 						<td> <a href="./dailyprep/34DP.05.08.21.pdf">Daily prep</a> </td>
-						<td> <a href="">12.10</a> </td>
+						<td> <a href="https://youtu.be/2AZTjQBKqN8">12.10</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
