small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -378,7 +378,7 @@
 						<td> Finals </td>
 						<td> </td>
 						<td> </td>
-						<td> </td>
+						<td> <a href="https://youtu.be/I_6kx5d26nw">Conservative Vector Fields Theorem</a>, <a href="https://youtu.be/siUVqlH0ZPE">The Three Big Integral Theorems</a> </td>
 						<td> </td>
 					</tr>
 				</table>
