small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -51,18 +51,25 @@
 
 		<div id="col2">
 			<section id="welcome">
-			    <h2>Welcome!</h2>
 
-			    <h3>Week 12</h3>
+			    <h3>Finals week</h3>
 			    <ul>
-			    	<li> <a href="./resources/chapter_10_checkpoint_2.pdf">Chapter 10 checkpoint attempt 2</a> (30 min per problem) Due May 2 </li>
-			    	<li> <a href="./dailyprep/34DP.04.27.21.pdf">4/20 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.04.29.21.pdf">4/22 daily prep</a> </li>
-				    <li> Reflection: As we wrap up the semester and our thoughts turn toward the future perhaps a useful reflection would be to think about what it means to be a mathematian and what your future could hold. This week and next an option for reflection is to read a bio from <a href="https://www.ams.org/about-us/LivingProof.pdf">this blog</a> about diverse mathematical paths and reflect on it. Or as always pick from the standard list. <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
-			    </ul>
+					    	<li> <a href="./resources/chapter_10_checkpoint_3.pdf">Chapter 10 checkpoint attempt 3</a> (30 min per problem) Due May 18 </li>
+					    	<li> <a href="./resources/chapter_11_checkpoint_2.pdf">Chapter 11 checkpoint attempt 2</a> (30 min per problem) Due May 18 </li>
+					    	<li> Chapter 12 checkpoint coming soon. </li>
+						    <li> Reminder: if you have not completed the course feedback please do so! </li>
+				</ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 12</h3>
+					    <ul>
+					    	<li> <a href="./resources/chapter_10_checkpoint_2.pdf">Chapter 10 checkpoint attempt 2</a> (30 min per problem) Due May 2 </li>
+					    	<li> <a href="./dailyprep/34DP.04.27.21.pdf">4/20 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.04.29.21.pdf">4/22 daily prep</a> </li>
+						    <li> Reflection: As we wrap up the semester and our thoughts turn toward the future perhaps a useful reflection would be to think about what it means to be a mathematian and what your future could hold. This week and next an option for reflection is to read a bio from <a href="https://www.ams.org/about-us/LivingProof.pdf">this blog</a> about diverse mathematical paths and reflect on it. Or as always pick from the standard list. <a href="./resources/reflections.pdf">Reflection prompts</a>. </li>
+					    </ul>
 
 			    		<h3>Week 11</h3>
 					    <ul>
