small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -63,6 +63,14 @@
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
 
+			    		<h3>Week 13</h3>
+					    <ul>
+					    	<li> <a href="./resources/chapter_12_checkpoint_1_a.pdf">Chapter 12 checkpoint part a</a> (2 hours) </li>
+					    	<li> <a href="./resources/chapter_12_checkpoint_1_b.pdf">Chapter 12 checkpoint part b</a> (2 hours) </li>
+					    	<li> <a href="./dailyprep/34DP.05.04.21.pdf">4/20 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.05.06.21.pdf">4/22 daily prep</a> </li>
+					    </ul>
+
 			    		<h3>Week 12</h3>
 					    <ul>
 					    	<li> <a href="./resources/chapter_10_checkpoint_2.pdf">Chapter 10 checkpoint attempt 2</a> (30 min per problem) Due May 2 </li>
