--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -56,7 +56,7 @@
 			    <ul>
 					    	<li> <a href="./resources/chapter_10_checkpoint_3.pdf">Chapter 10 checkpoint attempt 3</a> (30 min per problem) Due May 18 </li>
 					    	<li> <a href="./resources/chapter_11_checkpoint_2.pdf">Chapter 11 checkpoint attempt 2</a> (30 min per problem) Due May 18 </li>
-					    	<li> Chapter 12 checkpoint coming soon. </li>
+					    	<li> <a href="./resources/chapter_12_checkpoint_2.pdf">Chapter 12 checkpoint attempt 2</a> (30 min per problem) Due May 18 </li>
 						    <li> Reminder: if you have not completed the course feedback please do so! </li>
 				</ul>
 
