--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -48,17 +48,10 @@
 			<section id="welcome">
 			    <h2>Welcome</h2>
 
-			    <h3> Week 7</h3>
+			    <h3> Finals week</h3>
 			    <ul>
-			    	<li> <a href="./resources/projectinstructions.pdf"> Project Instructions </a> </li>
-			    	<li> <a href="./resources/projectrubric.pdf"> Project Rubric and peer review instructions </a> </li>
-			    	<li> Send first draft to peers (April 6th) </li>
-			    	<li> In class peer reviews (April 8th) </li>
-			    	<li> First project due (April 13th) </li>
-			    	<li> Second project proposal due (April 15th) </li>
-			    	<li> Send first draft of second project to peers (April 28th) </li>
-			    	<li> Out of class peer reviews (April 30th) </li>
-			    	<li> Second project due (May 7th) </li>
+			    	<li> Second project (due May 15th) </li>
+			    	<li> End of semester reflection and self assessment (due May 18th) </li>
 			    </ul>
 
 			    <details>
